--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,11 +1,16 @@
+
 body{
-  margin: 0;
-  padding: 0;
-  background-color: silver;
+  background-color: black;
+  /* overflow: hidden; */
 }
-header, section, footer{
-  max-width: 1200px;
-  margin: 0 auto;
+/* .container{
+  scroll-behavior: smooth; 
+}  */
+#About{
+  padding-top: 85px;
+}
+#Work{
+  padding-top: 85px;
 }
 h1{
   font-family: Baskerville, Times New Roman, serif;
@@ -75,30 +80,55 @@ margin-bottom: 36px;
   text-align: left;
   padding: 5px;
 }
-   header{
-    background-color:#000000; 
-   }
-
- header ul{
-   float: right;
-   padding: -50px 11px;
-
+header, section, footer{
   
+  width: 100%;
+  margin: 0 auto;
+} 
+.headerSpacer{
+ background-color: #000000;
+ height: 85px;
+ width: 100%;
+}
+
+header ul{
+  
+   justify-content: right;
+   padding: -50px 11px;
+   display: flex;
+   width: 100%;
+   margin-right: 10px;
  }
-  header li{
+header li{
    display: inline-block;
-   padding: 0px 11px;
+   padding: 0px 25px;
    color:white;
    font-family: 'Baskerville' Times New Roman, serif;
-   font-size: 18px;
+   font-size: 22px;
    font-weight: normal;
+   text-decoration: none;
   }
-  
+  header li a{
+  text-decoration: none;
+  color:white; 
+  }
+  header li a:hover{
+  color: #71C5BD;
+  }
+  nav{
+    position: fixed;
+    top: 0;
+    z-index: 1;
+    display: flex;
+    width: 100%;
+    height: 85px;
+    background: rgba(0,0,0,0.85);
+  }
   .content{
-    /* padding: 50px; */
+    
     background-color:#71C5BD;
      text-align:center;
-     /*max-width: 500px;*/
+    
      margin: 0 auto;
      font-family: Poppins, SF Pro, Sofia Pro, sans-serif;
      font-size: 18px; 
@@ -111,9 +141,6 @@ margin-bottom: 36px;
     padding: 10px;
   }
 
- /* .tableCircle{
-  
- } */
   #table1{
 width: 60%;
 margin-bottom: 40px;
@@ -129,17 +156,17 @@ margin-top: 70px;
  footer{
     background-color: #000000;
     width: 100%;
-   
-   
-  
+    position: fixed;
+    bottom: 0;
+    z-index: 1;
+    height: 85px;
+    background: rgba(0,0,0,0.85);
  }
-  
  .social{
     display: flex;
     justify-content: center;
-  
-    
   }
  .social a {
-   margin: 10px;
+   margin: 25px;
  }
+
